Add meme with text

--- a/css/setup/typography.css
+++ b/css/setup/typography.css
@@ -1,5 +1,5 @@
 /* lato */
-@font-face {
+/* @font-face {
   font-family: lato-bold;
   src: url('/fonts/lato/Lato-Bold.ttf');
 }
@@ -7,4 +7,4 @@
 @font-face {
   font-family: lato-regular;
   src: url('/fonts/lato/Lato-Regular.ttf');
-}
+} */
