--- a/css/components/canvas-settings.css
+++ b/css/components/canvas-settings.css
@@ -5,11 +5,8 @@
   font-size: 1.5rem;
   text-align: center;
 
-  /* display: grid;
-
-  > :nth-child(2) {
-    grid-column: 2;
-  } */
+  display: grid;
+  align-items: center;
 
   background-color: aquamarine;
 }
