--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@
 @import url('components/editor.css');
 @import url('components/gallery.css');
 @import url('components/canvas-settings.css');
+@import url('components/icons.css');
 @import url('components/hidden.css');
 
 /* MQ */
