--- a/css/setup/typography.css
+++ b/css/setup/typography.css
@@ -1,10 +1,5 @@
 /* lato */
-/* @font-face {
-  font-family: lato-bold;
-  src: url('/fonts/lato/Lato-Bold.ttf');
-}
-
 @font-face {
-  font-family: lato-regular;
-  src: url('/fonts/lato/Lato-Regular.ttf');
-} */
+  font-family: inter;
+  src: url('../fonts/inter-regular.ttf');
+}
