--- a/css/basics/base.css
+++ b/css/basics/base.css
@@ -5,6 +5,7 @@
 html {
   font-family: lato-regular, sans-serif;
   font-size: 16px;
+  font-family: 'inter', sarif;
 }
 
 img {
@@ -13,4 +14,17 @@ img {
 
 li {
   cursor: pointer;
+}
+
+p {
+  width: 80vw;
+
+  text-align: center;
+  margin: auto;
+  font-size: 2rem;
+}
+
+h2 {
+  text-align: center;
+  font-size: 2.5rem;
 }
