--- a/css/components/canvas-settings.css
+++ b/css/components/canvas-settings.css
@@ -1,10 +1,13 @@
 .canvas-settings {
   width: 100%;
+  max-height: 600px;
+  max-width: 400px;
 
   font-size: 1.5rem;
   text-align: center;
 
   display: grid;
+  grid-template-rows: 1fr 3fr;
   gap: 0.5rem;
 
   > :first-child {
@@ -26,4 +29,8 @@
   margin-bottom: 0.5em;
   font-size: 2rem;
   text-transform: uppercase;
+}
+
+.save-btns-container {
+  max-width: 400px;
 }
