--- a/css/setup/mq.css
+++ b/css/setup/mq.css
@@ -1,15 +1,12 @@
-
 @media (max-width: 1080px) {
   .editor {
-     width: 90vw;
+    width: 90vw;
   }
 }
 
 /* mobile only */
 @media (max-width: 850px) {
   .editor {
-    display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     max-height: 1000px;
@@ -30,12 +27,19 @@
   }
 
   canvas {
-    min-width:400px;
+    min-width: 400px;
+  }
+
+  p {
+    font-size: 1.4rem;
+  }
+
+  h2 {
+    font-size: 1.7rem;
+  }
 }
 
 /* Medium BP */
-
-
 
 /* Large BP */
 
