--- a/css/components/main-header.css
+++ b/css/components/main-header.css
@@ -2,7 +2,7 @@
   padding-inline: 1rem;
   padding-block-end: 5rem;
 
-  background-image: url('/icons/Background Grass.png');
+  background-image: url('header/Background Grass.png');
 }
 
 .nav-list {
