--- a/css/basics/base.css
+++ b/css/basics/base.css
@@ -11,7 +11,7 @@ html {
 
 body {
   margin: 0;
-  background-image: url('/icons/Background Dirt.png');
+  background-image: url('background/Background Dirt.png');
 }
 
 img {
