--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@
 @import url('components/btns.css');
 @import url('components/modal-meme-saved.css');
 @import url('components/about.css');
+@import url('components/black-screen.css');
 @import url('components/hidden.css');
 
 /* MQ */
