--- a/css/components/gallery.css
+++ b/css/components/gallery.css
@@ -23,7 +23,7 @@
     justify-content: center;
     align-items: center;
 
-    font-size: 50px;
+    font-size: 2rem;
 
     > label:hover {
       color: var(--clr-txt--1);
