--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@
 @import url('components/modal-meme-saved.css');
 @import url('components/about.css');
 @import url('components/black-screen.css');
+@import url('components/no-meme-container.css');
 @import url('components/hidden.css');
 
 /* MQ */
