--- a/css/components/icons.css
+++ b/css/components/icons.css
@@ -21,6 +21,11 @@
 .icon {
   width: auto;
   max-width: 50px;
+  cursor: pointer;
+
+  :nth-child(4) & {
+    padding-block: 10rem;
+  }
 }
 
 .icon-cell {
