--- a/css/components/editor.css
+++ b/css/components/editor.css
@@ -6,15 +6,15 @@
   border-radius: 1.5rem;
 
   display: grid;
-  gap: 1rem;
+  justify-content: center;
+  gap: 2rem;
 
   background-color: var(--clr-primary-light);
 
   > :nth-child(2) {
     justify-self: center;
     align-self: center;
-    grid-row: 1;
-    grid-column: 1;
+    grid-row: 1 / span 2;
   }
 
   > :nth-child(3) {
