--- a/css/components/icons.css
+++ b/css/components/icons.css
@@ -1,7 +1,7 @@
 .icons-container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr) 0.6fr;
-  grid-template-rows: repeat(3, 1fr) 0.6fr;
+  grid-template-columns: repeat(3, 6rem) 5rem;
+  grid-template-rows: repeat(3, 6rem) 5rem;
   gap: 0.5rem;
   width: 100%;
   max-width: 400px;
@@ -24,7 +24,7 @@
   cursor: pointer;
 
   :nth-child(4) & {
-    padding-block: 10rem;
+    padding-block: 7rem;
   }
 }
 
