--- a/css/setup/mq.css
+++ b/css/setup/mq.css
@@ -1,6 +1,18 @@
-@media (max-width: 1080px) {
+@media (max-width: 1200px) {
   .editor {
     width: 90vw;
+  }
+
+  .icons-container {
+    display: grid;
+    grid-template-columns: repeat(3, 5rem) 4rem;
+    grid-template-rows: repeat(3, 5rem) 4rem;
+  }
+
+  .icon {
+    :nth-child(4) & {
+      padding-block: 5.5rem;
+    }
   }
 
   .main-nav {
@@ -94,14 +106,30 @@
 
 @media (max-width: 415px) {
   .canvas-settings {
-    grid-template-rows: 120px 300px;
+    grid-template-rows: 100px 200px;
   }
 
   .icons-container {
-    grid-template-columns: repeat(3, 70px) 60px;
-    grid-template-rows: repeat(3, 70px) 60px;
+    grid-template-columns: repeat(3, 3rem) 2.5rem;
+    grid-template-rows: repeat(3, 3rem) 2.5rem;
     justify-content: center;
     height: max-content;
+  }
+
+  .text-input {
+    /* min-width: 10px; */
+    font-size: 0.8rem;
+  }
+
+  .setting-header {
+    font-size: 1.5rem;
+  }
+  .icon {
+    max-width: 20px;
+
+    :nth-child(4) & {
+      padding-block: 2.5rem;
+    }
   }
 
   canvas {
