--- a/css/components/gallery.css
+++ b/css/components/gallery.css
@@ -12,6 +12,14 @@
   grid-template-rows: 1fr 1fr;
   gap: 3.5rem;
   margin-bottom: 1rem;
+
+  > :nth-child(3) {
+    grid-column: 2;
+  }
+
+  > :nth-child(4) {
+    grid-column: span 2;
+  }
 }
 
 .gallery-input {
