--- a/css/basics/base.css
+++ b/css/basics/base.css
@@ -4,7 +4,7 @@
 
 html {
   font-size: 16px;
-  font-family: 'inter', sarif;
+  font-family: 'inter', 'heebo', serif;
   color: var(--clr-txt-base);
 }
 
@@ -15,6 +15,7 @@ body {
 
 img {
   width: 100%;
+  cursor: pointer;
 }
 
 li {
@@ -56,7 +57,7 @@ a {
 button {
   border: none;
   color: var(--clr-txt-base);
-  font-family: 'inter', sarif;
+  font-family: 'inter', 'heebo', serif;
   font-size: 1.5rem;
   width: 100%;
 
