--- a/css/components/icons.css
+++ b/css/components/icons.css
@@ -1,10 +1,11 @@
 .icons-container {
   width: max-content;
   display: grid;
+  grid-template-columns: repeat(3, 1fr) 0.8fr;
+  grid-template-rows: repeat(3, 1fr) 0.8fr;
   gap: 0.5rem;
   width: 100%;
   max-width: 400px;
-  /* margin-inline: auto; */
 
   > :nth-child(4) {
     grid-column: 4;
@@ -23,7 +24,7 @@
   cursor: pointer;
 
   :nth-child(4) & {
-    padding-block: 7rem;
+    max-width: 90%;
   }
 }
 
