--- a/css/components/modal-meme-saved.css
+++ b/css/components/modal-meme-saved.css
@@ -1,7 +1,7 @@
 .modal-meme-saved {
-  border: 1px solid grey;
-  border-radius: 4rem;
-  bottom: 60%;
+  background-color: rgb(249, 227, 58);
+  border: 1px solid rgb(0, 0, 0);
+  bottom: 75%;
   font-size: 1.5rem;
   pointer-events: none;
 }
